@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 46e4c93d091d737709a7d8de233f06645c06dd9b ChangeLog
+SHA1 4fa04f7ee2fa0f2749600d1fef46b06e90c7cc36 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 e3ab438d5df16ebbbe11679825b593a21eafc714 MANIFEST
-SHA1 6bf28c7cf18a7fe53eec90e917719d1c00a17b51 META.yml
-SHA1 3f4ecae1b41aadf6aaafae3a9f7ece3a85cf710b Makefile.PL
+SHA1 c0d969f8172b1083725467fd6355c20f819305c4 META.yml
+SHA1 da748d9188a284454b583be343be7f74695f6318 Makefile.PL
 SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 8c1ed24130f6b11c9ff8db564eb007aa66ed1447 lib/Net/FullAuto.pm
+SHA1 4dabc67ee567b54a45243a0a68d697a1d32d6f39 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 e3db77a102d58a41e7403e85ea9740ba0eeceb67 lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUNuiVAAoJEBa/9Pad787EfokH/1tEmYWtNUkt1W8oCaF5TSdT
-r2WZR+ivNOdQiLDhvYVTlR5IfwwilIeWoWdJzYblmqxDBHpO1oF20LmIwIMb3MpL
-Ebbc9ECMziOHqO0+Y0Pwk1i9Q7+Yj1HlL1rApQrYMx6qSzXL1Z2trr48w5zpIzk+
-JXlVtFWVDbgTru+1+FMOp53blUUM9tPa1ljP1G0mXDFhts6juLYapebUqyTsyaVP
-QwPnX/f4t0epKMF+Gg4kkzBlfKkigsb3j+YuPM00CLEgt1sYg52gWX6LGFInhpEy
-LVlZ7YaodMhJ5iEwhJ+ZNQYR0Z1oJsLHFtfHhS4kMeitvoKF++bZrB96vI9Lx9E=
-=Vjds
+iQEcBAEBAgAGBQJUOAKnAAoJEBa/9Pad787Ex6MH+wc92vM3bhjUeSSwIwWH7Qom
+fU0MR5qp3dNR1FFMfcxRok/vscCkRyV8VJYFATvSOiSyD2l1/5GdIeOIBwY1Ppzx
+qSHP8Jmo37EMS+1zrpJesdbYx1MZvIA9icTvWNv1ccHdJDZXkLTA3nyJvyRBLING
+xHz46yGtkJfGqLnsbZmoAVXrtDpiruPV2Pd0LQfz/ta+BENQBb5ni9e7Z7v9v/g6
+eQA+XjRkHcYS8CgUGLtRywvUAA21QPAO7KtPPsqM2pvNPk3phqKMQhyk80WWxqiv
+eob5hYPRbl9Iqv4Nn7hor33HIaEkrOrsvTT6lHzJuJlbF1YnwLKwi3NiTVDpyaM=
+=1wRY
 -----END PGP SIGNATURE-----
