@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999918';
+our $VERSION='0.999999999919';
 
 
 use 5.005;
